tests/snapshots/conformance__n_structure_single_eacute.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[233]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
