tests/snapshots/conformance__n_structure_uescaped_lf_before_string.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[\u000A""]
stdout --- 
<empty>
stderr --- 
error: unexpected character `\`. expected start of a json value
 --> stdin:1:2
  |
1 | [\u000A""]
  |  ^
