tests/snapshots/conformance__n_structure_unclosed_array.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:1:2
  |
1 | [1
  | -^
  | |
  | expected due to `[`
  |
help: insert the missing closed delimiter `]`
  |
1 | [1]
  |   +
