tests/snapshots/conformance__n_structure_unclosed_array_partial_null.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[ false, nul
stdout --- 
<empty>
stderr --- 
error: unexpected character `n`. expected start of a json value
 --> stdin:1:10
  |
1 | [ false, nul
  |          ^
