tests/snapshots/conformance__n_structure_unclosed_object.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"asd":"asd"
stdout --- 
<empty>
stderr --- 
error: expected comma or closed curly brace, found no significant characters
 --> stdin:1:12
  |
1 | {"asd":"asd"
  | -     -----^
  | |     |
  | |     expected due to the preceding key/value pair
  | object opened here by `{`
  |
help: insert the missing closed brace
  |
1 | {"asd":"asd"}
  |             +
